# setli

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: App.css  App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client_manager.rs  cmd.rs  main.rs
src/components/: ErrorMessage.module.css  ErrorMessage.tsx  OBSConnection.module.css  OBSConnection.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SongList.module.css  SongList.tsx
src/hooks/: useSettings.ts  useSongs.ts
